--- a/src/renderer/App.css
+++ b/src/renderer/App.css
@@ -6,6 +6,7 @@ body {
   position: relative;
   color: white;
   min-height: 100vh;
+  min-width: 850px;
   /* height: 100vh; */
   /* background: #dd5789; */
   background: linear-gradient(
