--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -6,7 +6,7 @@
       http-equiv="Content-Security-Policy"
       content="script-src 'self' 'unsafe-inline'"
     />
-    <title>Hello Electron React!</title>
+    <title>OPIS. Image analysis</title>
   </head>
   <body>
     <div id="root" style="width:100%; margin-bottom: auto;"></div>
